@@ -1,3 +1,6 @@
+FusionForge 6.1.1:
+* Widget User Page: fix owner test to ensure the user is the owner of the layout.
+
 FusionForge 6.1:
 * Accounts: minimum password length is now 8 (Sylvain Beucler)
 * Accounts: add minimal constraints to password (upper-case, lower-case, non-alphanumeric check) [#826] (Inria)
